# AmiRVOS

./: .gitignore  Makefile  README.md  rust-toolchain
fs/: Cargo.toml
fs/src/: lib.rs
mkfs/: Cargo.toml
mkfs/src/: main.rs
os/: Cargo.toml  Makefile
os/.cargo/: config
os/src/: bio.rs  clint.rs  config.rs  console.rs  cpu.rs  entry.asm  irq.rs  linker.ld  lock.rs  macros.rs  main.rs  mem.asm  page.rs  panic.rs  plic.rs  uart.rs
os/src/asm/: entry.asm  mem.asm  sched.asm  switch.asm  syscall.asm  trampoline.asm  trap.asm  utils.asm
os/src/fs/: mod.rs
os/src/mm/: kheap.rs  linked_list_allocator.rs  mapping.rs  mod.rs  page.rs
os/src/sched/: context.rs  mod.rs  scheduler.rs  task.rs  user.rs
os/src/syscall/: mod.rs  proc.rs  types.rs
os/src/trap/: context.rs  mod.rs
os/src/utils/: cast.rs  cstr.rs  mod.rs  ringbuf.rs
os/src/virtio/: blk.rs  mod.rs
scripts/: pre-commit.hook
