[package]
name = "os"
version = "0.1.0"
authors = ["RinHizakura <s921975628@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.6.0"
buddy_system_allocator = "0.6"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
