[package]
name = "os"
version = "0.1.0"
authors = ["RinHizakura <s921975628@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"

[dependencies.spin]
version = "0.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
