[package]
name = "os"
version = "0.1.0"
authors = ["RinHizakura <s921975628@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"
riscv = {version = "0.10.1"}
plain = "0.2.3"
fs = { path = "../fs" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
